# event-creator

./: .env.local.example  .gitignore  Dockerfile  README.md  pyproject.toml  supervisord.conf
.github/workflows/: ci.yml  deploy.yml
app/: main.py  worker.py
app/api/v1/: events.py  import_pending_files.py  internal_pipeline.py  llm_prompt.py  processing_runs.py  storage_config.py  storage_dropbox.py  storage_google_drive.py  upload.py  user_settings.py
app/auth/: oauth.py
app/core/: auth.py  calendar_url.py  config.py  initials.py  nav.py  onboarding.py  registry.py  security.py  templating.py
app/db/: readonly_base.py  session.py
app/models/: __init__.py  event.py  host_user.py  llm_prompt.py  processing_run.py  processing_step.py  storage_config.py  user_settings.py
app/pages/: dashboard.py  logs.py  processing.py  prompt.py  settings_fragments.py  upload.py
app/schemas/: event.py  pipeline.py  processing_run.py  user_settings.py
app/services/: host_user.py
app/services/notifications/: pipeline.py  sender.py
app/services/pipeline/: cloud_tasks.py  dispatch.py  progress.py  runner.py
app/templates/pages/: dashboard.html  logs.html  processing.html  processing_run_detail.html  prompt.html  upload.html
app/templates/partials/: dashboard_body.html  events_panel.html  import_pending_button.html  logs_body.html  logs_grid.html  processing_logs.html  processing_status.html  processing_step.html  settings_notifications.html  (+3 more)
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/tests/: dashboard.spec.ts
e2e/utils/: helpers.ts
infra/cloud_tasks/: provision.ps1  provision.sh
migrations/: env.py
migrations/versions/: 0001_adopt_event_creator_schema.py
scripts/: build_css.py  grant-oauth-secret-access.ps1
tests/: conftest.py  test_calendar_url.py  test_cloud_tasks_scheduler.py  test_dashboard_auth.py  test_dashboard_page.py  test_dispatch.py  test_email_notifications.py  test_event_model.py  test_events_api.py  test_host_user_model.py  test_import_pending_files_api.py  test_internal_pipeline_api.py  test_llm_prompt_api.py  test_llm_prompt_model.py  test_logs_page.py  test_onboarding_checklist.py  test_pipeline_e2e_gemini.py  test_pipeline_notifications.py  test_pipeline_runner.py  test_processing_page.py  test_processing_run_detail.py  test_processing_sse.py  test_prompt_page.py  test_prompt_reset.py  test_registry_client_wiring.py  test_settings_fragments.py  test_sms_notifications.py  test_storage_config_api.py  test_storage_config_model.py  test_storage_dropbox.py  test_storage_factory.py  test_storage_google_drive.py  test_upload_api.py  test_upload_page.py  test_user_settings_api.py  test_user_settings_model.py  test_worker.py
