[project]
name = "event-creator"
version = "0.1.0"
description = "OrganizeMe platform restructure — independent Event Creator service (Cloud Run + FastAPI), trusting the Host-issued JWT for SSO"
requires-python = ">=3.12"
dependencies = [
    "organizeme-chrome @ git+https://github.com/rustycoopes/organize-me@chrome-v0.2.0#subdirectory=packages/chrome",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.31.0",
    "alembic>=1.18.5",
    "fastapi-users-db-sqlalchemy>=7.0.0",
    "pydantic-settings>=2.14.2",
    "cryptography>=44.0.0",
    # OAuth client for the Google Drive / Dropbox storage-connect flows (Slice R7) - mirrors
    # organize-me's app/auth/oauth.py usage.
    "httpx-oauth>=0.16.1",
    # Promoted from dev-only: the OAuth state-JWT encode/decode (Slice R7's CSRF double-submit)
    # runs in request handlers, not just tests.
    "pyjwt>=2.9",
    "boto3>=1.35",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "mypy>=1.13",
]

[tool.mypy]
strict = true
python_version = "3.12"

[[tool.mypy.overrides]]
module = "boto3.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "botocore.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.metadata]
allow-direct-references = true
